[tool.poetry]
name = "repl_pygame_PyPaint"
version = "0.1.0"
description = "Basic pygame drawing app"
authors = ["Rishav Mitra <rishavmitra10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
